--- a/src/components/movie-view/movie-view.scss
+++ b/src/components/movie-view/movie-view.scss
@@ -1,7 +1,23 @@
 .back-button {
     padding: 4px 12px 4px 12px;
     color: whitesmoke;
-    background-color: dodgerblue;
     border: none;
     border-radius: 4px;
+}
+
+.first {
+    padding-top: 0px
+}
+
+span {
+    font-size: large;
+    padding-bottom: 20px;
+}
+
+h4 {
+    padding-top: 20px;
+}
+
+Button {
+    padding-top: 20px;
 }
